--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-EMAILJS_SERVICE_ID = service_8tdn547
-EMAILJS_TEMPLATE_ID = template_0bb7gcd
+VITE_APP_EMAILJS_SERVICE_ID = service_w0p8hxf
+VITE_APP_EMAILJS_TEMPLATE_ID = template_0bb7gcd
+VITE_APP_EMAILJS_PUBLIC_KEY = J7iFUvQqIILaGTvxf
+VITE_APP_EMAILJS_AUTO_REPLY_TEMPLATE_ID = template_3s9anyb
+
