--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tilt": "^1.0.2",
     "react-typed": "^2.0.12",
     "react-vertical-timeline-component": "^3.6.0",
+    "sweetalert2": "^11.12.4",
     "three": "^0.165.0"
   },
   "devDependencies": {
